--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,59 @@
-.App {
-  text-align: center;
+.app {
+    width: 100%;
+    height: 100vh;
+    display: flex;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.search-bar {
+    width: 25%;
+    height: 100%;
+    border-right: 1px solid gray;
+    padding: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.content {
+    width: 75%;
+    padding: 20px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.ant-input-group-addon {
+    border: none;
+    padding: 0;
 }
 
-.App-link {
-  color: #61dafb;
+.ant-input-wrapper {
+    margin-bottom: 14px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.repos-list {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+.repos-list > button {
+    text-align: start;
+}
+
+.profile-pic {
+    margin-right: 20px;
+    width: 120px;
+    height: 120px;
+}
+
+.details {
+    display: flex;
+    margin: 20px 0;
+}
+
+.details span {
+    font-weight: 600;
+}
+
+.spinner {
+    width: 100%;
+    height: 90vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
